<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginTop="28dp"
                android:layout_gravity="center"
                android:fontFamily="@font/audiowide"
                android:text="@string/receita"
                android:textColor="#000"
                android:textSize="40dp" />

            <EditText
                android:id="@+id/nReceita"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="14dp"
                android:ems="10"
                android:hint="@string/nome_da_receita"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="133dp"
                android:layout_height="25dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="228dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/ingredientes"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/ingredientes"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:gravity="start|bottom"
                android:hint="@string/ingredientes"
                android:inputType="textMultiLine"
                android:maxLines="5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="144dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/modo_de_prepara_o"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/preparacao"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:gravity="start|bottom"
                android:hint="@string/prepara_o"
                android:inputType="textMultiLine"
                android:maxLines="5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="256dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/categoria"
                android:textSize="20dp" />

            <Spinner

                android:id="@+id/cbCategoria"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:entries="@array/categorias" />

            <TextView
                android:id="@+id/tvSubCat"
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="200dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/sub_categoria"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/cbSubCategoria"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="30dp"
                android:entries="@array/subCategoria" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btEdit"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/costume_button_rounded_corners"
                    android:text="@string/criar" />

                <Button
                    android:id="@+id/btCancel"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/costume_button_rounded_corners"
                    android:text="@string/cancelar" />
            </TableRow>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>